--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </tr>
     <tr>
       <td><h3>INFORME:</h3></td>
-      <td><a href="http://186.144.154.57/verMuestraCliente.php?qr=a203oEER1VF30rD0a4n5">Informe_CINo_A-43403FQ.pdf</a></td>
+      <td><a href="remision_controlab_RM-37158_2024 (1).pdf">Informe_CINo_A-43403FQ.pdf</a></td>
     </tr>
   </table>
 <div>
