--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       color: #808080;
       font-size: 20px;
       font-family: sans-serif;
+      margin-bottom: 60px;
     }
     h3 {
       color: #2D7D04;
