--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </tr>
     <tr>
       <td><h3>INFORME:</h3></td>
-      <td><a href="remision_controlab_RM-37158_2024 (1).pdf">Informe_CINo_A-43403FQ.pdf</a></td>
+      <td><a href="remision_controlab_RM-37158_2024.pdf">Informe_CINo_A-43403FQ.pdf</a></td>
     </tr>
   </table>
 <div>
